--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             favourite sites.
           </div>
           <div class="tab-info-third-row">
-            <button class="blue-color-button general-button blue-color">More info</button>
+            <button class="blue-color-button general-button blue-color more-info-button">More info</button>
           </div>
         </div>
       </div>
