--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="nav-bar all-titles-dark-blue-color-button">
       <div class="nav-title">
         <span><img src="images/logo-bookmark.svg" alt="" /> </span>
-        <span class="hambugerImage"><img src="images/icon-hamburger.svg" alt="" class="hambugerIcon">
+        <span class="hamburgerImage"><img src="images/icon-hamburger.svg" alt="" class="hambugerIcon">
         </span>
       </div>
       <ul class="nav-links">
